--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,10 @@
       content="Web site created using create-react-app"
     />
     <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://api.stripe.com https://js.stripe.com https://m.stripe.com https://*.stripe.com"
-    />
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://js.stripe.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://custom-nails-backend.onrender.com"
+  />
+  
     <title>React App</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/output.css" />
   </head>
