--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,9 @@
       content="Web site created using create-react-app"
     />
     <meta
-    http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://js.stripe.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://custom-nails-backend.onrender.com"
+  http-equiv="Content-Security-Policy"
+  content="default-src 'self'; script-src 'self' https://js.stripe.com; connect-src 'self' https://custom-nails-backend.onrender.com"
   />
-  
     <title>React App</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/output.css" />
   </head>
