--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,17 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' https://js.stripe.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: *; connect-src 'self' https://custom-nails-backend.onrender.com https://api.stripe.com https://m.stripe.com https://*.stripe.com; frame-src 'self' https://js.stripe.com *"
+      content="
+        default-src 'self'; 
+        script-src 'self' 'unsafe-inline' https://js.stripe.com; 
+        style-src 'self' 'unsafe-inline'; 
+        img-src 'self' data: *; 
+        connect-src 'self' https://custom-nails-backend.onrender.com 
+                    https://api.stripe.com 
+                    https://m.stripe.com 
+                    https://*.stripe.com 
+                    https://merchant-ui-api.stripe.com; 
+        frame-src 'self' https://js.stripe.com *"
     />
     <title>React App</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/output.css" />
@@ -21,5 +31,6 @@
     <div id="root"></div>
   </body>
 </html>
+
 
 
