--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta
+    <!--<meta
       http-equiv="Content-Security-Policy"
       content="
         default-src 'self'; 
@@ -23,7 +23,7 @@
                     https://ppm.stripe.com 
                     https://merchant-ui-api.stripe.com; 
         frame-src 'self' https://js.stripe.com *"
-    />
+    /> -->
     <title>React App</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/output.css" />
   </head>
