--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <!--<meta
       http-equiv="Content-Security-Policy"
       content="
         default-src 'self'; 
-        script-src 'self' 'unsafe-inline' https://js.stripe.com; 
-        style-src 'self' 'unsafe-inline'; 
-        img-src 'self' data: *; 
-        connect-src 'self' https://custom-nails-backend.onrender.com 
-                    https://api.stripe.com 
-                    https://errors.stripe.com 
-                    https://r.stripe.com 
-                    https://ppm.stripe.com 
-                    https://merchant-ui-api.stripe.com; 
-        frame-src 'self' https://js.stripe.com *"
-    /> -->
+        connect-src 'self' https://api.stripe.com https://errors.stripe.com https://r.stripe.com https://ppm.stripe.com https://merchant-ui-api.stripe.com https://maps.googleapis.com https://checkout.stripe.com; 
+        frame-src 'self' https://js.stripe.com https://hooks.stripe.com https://connect-js.stripe.com https://checkout.stripe.com; 
+        script-src 'self' 'unsafe-inline' https://js.stripe.com https://maps.googleapis.com https://connect-js.stripe.com https://checkout.stripe.com; 
+        style-src 'self' 'unsafe-inline' sha256-0hAheEzaMe6uXIKV4EehS9pu1am1lj/KnnzrOYqckXk=; 
+        img-src 'self' data: https://*.stripe.com;
+      "
+    />
     <title>React App</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/output.css" />
   </head>
@@ -32,6 +25,7 @@
     <div id="root"></div>
   </body>
 </html>
+
 
 
 
