--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       http-equiv="Content-Security-Policy"
       content="
         default-src 'self'; 
-        connect-src 'self' https://api.stripe.com https://errors.stripe.com https://r.stripe.com https://ppm.stripe.com https://merchant-ui-api.stripe.com https://maps.googleapis.com https://checkout.stripe.com; 
+        connect-src 'self' https://api.stripe.com https://errors.stripe.com https://r.stripe.com https://ppm.stripe.com https://merchant-ui-api.stripe.com https://maps.googleapis.com https://checkout.stripe.com https://custom-nails-backend.onrender.com; 
         frame-src 'self' https://js.stripe.com https://hooks.stripe.com https://connect-js.stripe.com https://checkout.stripe.com; 
         script-src 'self' 'unsafe-inline' https://js.stripe.com https://maps.googleapis.com https://connect-js.stripe.com https://checkout.stripe.com; 
         style-src 'self' 'unsafe-inline' sha256-0hAheEzaMe6uXIKV4EehS9pu1am1lj/KnnzrOYqckXk=; 
@@ -25,6 +25,7 @@
     <div id="root"></div>
   </body>
 </html>
+
 
 
 
