--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     
-    <title>React App</title>
+    <title>Bunny Bubble Nails</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/output.css" />
   </head>
   <body>
